# poc-rust-cargo-lambda

./: Cargo.toml  Makefile  README.MD
src/: main.rs  response.rs
